--- a/diamond-server/src/main/resources/jdbc.properties
+++ b/diamond-server/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 db.url=jdbc:mysql://localhost:3306/diamond?characterEncoding=utf8&connectTimeout=1000&autoReconnect=true
 db.user=root
-db.password=root
+db.password=
 db.initialSize=10
 db.maxActive=10
 db.maxIdle=5
