--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,14 @@
 	<groupId>com.taobao.diamond</groupId>
 	<artifactId>diamond-all</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.5.4.bbg-SNAPSHOT</version>
+	<version>2.0.5.4.cjiuzhou-SNAPSHOT</version>
 	<name>taobao diamond v${project.version}</name>
+
+	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!--<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>-->
+	</properties>
 
 	<modules>
 		<module>diamond-client</module>
@@ -15,49 +21,17 @@
 		<module>diamond-server</module>
 		<module>diamond-utils</module>
 	</modules>
-	
+
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-source-plugin</artifactId>
-					<version>2.2.1</version>
-					<executions>
-						<execution>
-							<phase>package</phase>
-							<goals>
-								<goal>jar</goal>
-								<goal>test-jar</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.4</version>
-					<executions>
-						<execution>
-							<phase>package</phase>
-							<goals>
-								<goal>jar</goal>
-								<goal>test-jar</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -65,12 +39,12 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>${pom.groupId}</groupId>
+				<groupId>${project.groupId}</groupId>
 				<artifactId>diamond-client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>${pom.groupId}</groupId>
+				<groupId>${project.groupId}</groupId>
 				<artifactId>diamond-utils</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -157,11 +131,4 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding><!-- compile插件 -->
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding><!-- site插件  -->
-		<maven.compiler.source>1.7</maven.compiler.source><!-- compile插件 -->
-		<maven.compiler.target>1.7</maven.compiler.target><!-- compile插件 -->
-	</properties>
 </project>
